// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component styled components StyledCloseHandle - basic render: StyledCloseHandle has correct styles 1`] = `
Object {
  "alignItems": "center",
  "background": "transparent",
  "border": "none",
  "cursor": "pointer",
  "display": "flex",
  "marginLeft": "$theme.sizing.scale600",
  "overflow": "visible",
  "padding": 0,
  "width": "$theme.sizing.scale800",
}
`;

exports[`Component styled components StyledDragHandle - basic render: StyledDragHandle has correct styles 1`] = `
Object {
  "alignItems": "center",
  "display": "flex",
  "marginLeft": 0,
  "marginRight": "$theme.sizing.scale600",
  "padding": 0,
  "width": "$theme.sizing.scale800",
}
`;

exports[`Component styled components StyledItem - basic render: StyledItem has correct styles 1`] = `
Object {
  ":hover": Object {
    "border": "2px solid $theme.colors.primary100",
    "color": "$theme.colors.primary",
  },
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "border": "2px solid transparent",
  "boxShadow": null,
  "cursor": "grab",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "margin": 0,
  "padding": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledItem - dragged: StyledItem has correct styles when being dragged 1`] = `
Object {
  ":hover": Object {},
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "border": "2px solid $theme.colors.primary",
  "boxShadow": "0px 2px 6px rgba(39, 110, 241, 0.32)",
  "cursor": "grabbing",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "margin": 0,
  "padding": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledItem - selected: StyledItem has correct styles when being selected 1`] = `
Object {
  ":hover": Object {},
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "border": "2px solid $theme.colors.primary",
  "boxShadow": null,
  "cursor": "grab",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "margin": 0,
  "padding": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledLabel - basic render: StyledLabel has correct styles 1`] = `
Object {
  "flexGrow": 1,
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "marginLeft": 0,
  "padding": 0,
}
`;

exports[`Component styled components StyledList - basic render: StyledList has correct styles 1`] = `
Object {
  "cursor": null,
  "padding": 0,
}
`;

exports[`Component styled components StyledList - dragging is active: StyledList has correct styles when dragging is active 1`] = `
Object {
  "cursor": "grabbing",
  "padding": 0,
}
`;

exports[`Component styled components StyledRoot - basic render: StyledRoot has correct styles 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "width": "100%",
}
`;
